<resources>
    <string name="app_name">Brunch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="restaurant_details">Details</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="see_the_menu">See the menu</string>
    <string name="the_menu">The Menu</string>
    <string name="raitings_reviews"><![CDATA[Raitings & Reviews]]></string>
    <string name="read_all_reviews">Read all reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="see_all">See all</string>
    <string name="slash_ten">/10</string>
    <string name="reserve">Reserve</string>
    <string name="empty_restaurants">No Restaurants Found</string>
    <string name="load_restaurants_error">Something wrong happened</string>
</resources>