<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="restaurant"
            type="com.teddy.common.model.Restaurant" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/restaurant_details_header_height"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="@color/white"
                    app:sliderIndicatorUnselectedColor="@color/black20"
                    app:sliderScrollTimeInSec="1" />

                <include
                    layout="@layout/restaurant_details_header_info"
                    bind:smallDetail="@{restaurant}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black20" />

                <include layout="@layout/restaurant_details_menu_date" />

                <TextView
                    style="@style/Heading16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/the_menu"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/menu_list_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    tools:itemCount="1"
                    tools:listitem="@layout/menu_item_list" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:text="@string/see_the_menu"
                    android:textColor="@color/green_500" />

                <include
                    layout="@layout/restaurant_details_rating_reviews"
                    bind:ratingsDetails="@{restaurant}" />

                <include
                    layout="@layout/trip_advisor_reviews_banner"
                    bind:taReviews="@{restaurant}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="76dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/overlay_up_bottom_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_arrow_back" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_favorite_border" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_search" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reserve_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:paddingVertical="16dp"
            android:text="@string/reserve"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@drawable/overlay_bottom_up_white_gradient"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>